test(sdk-java): Add tests covering new StructDef generation functions